# elm-i18n

./: .gitignore  Cargo.toml  LICENSE  README.md  bug.md  install.sh  uninstall.sh
.claude/: settings.local.json
src/: config.rs  generator.rs  main.rs  parser.rs  replacer.rs  templates.rs  types.rs
test-cleemo/: elm-i18n.json
test-cleemo/src/I18n/: ComingSoon.elm
tests/: comprehensive_test.sh
tests/fulltest/error-cases/src/: I18n.elm
tests/fulltest/functions/src/: I18n.elm
tests/fulltest/multi/elm-i18n/: config.json
tests/fulltest/multi/src/I18n/: App.elm  Landing.elm
tests/fulltest/replace/src/: I18n.elm  Main.elm
tests/fulltest/single/src/: I18n.elm
tests/fulltest/unused/elm-i18n/: config.json
tests/fulltest/unused/src/: I18n.elm  Main.elm
