[package]
name = "elm-i18n"
version = "0.6.0"
edition = "2021"
authors = ["Charles-André Assus"]
description = "CLI tool for managing Elm I18n translations"
license = "MIT"
repository = "https://github.com/charles-andre-assus/elm-i18n"
homepage = "https://github.com/charles-andre-assus/elm-i18n"
keywords = ["elm", "i18n", "internationalization", "translation", "cli"]
categories = ["command-line-utilities", "internationalization", "development-tools"]

[[bin]]
name = "elm-i18n"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
